1. add basic layout from antd 2. change css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,34 @@
-.App {
+@import '~antd/dist/antd.css';
+
+#root, .App {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+}
+
+.ant-layout {
+  height: 100%;
+}
+
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
+}
+
+.logo {
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px;
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
 }
