--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  --deckgo-qrcode-size: 200px
 }
 
 .ant-layout {
@@ -31,4 +32,24 @@
 
 .site-layout .site-layout-background {
   background: #fff;
+}
+.login-background {
+  background: #ABCDEF;
+  font-family: Assistant, sans-serif;
+  display: flex;
+  min-height: 90vh;
+}
+.login {
+  color: white;
+  background:  #136a8a;
+  background: -webkit-linear-gradient(to right, #267871, #136a8a);
+  background: linear-gradient(to right, #26315a, #071631);
+  margin: auto;
+  box-shadow: 
+    0px 2px 10px rgba(0,0,0,0.2), 
+    0px 10px 20px rgba(0,0,0,0.3), 
+    0px 30px 60px 1px rgba(0,0,0,0.5);
+  border-radius: 8px;
+  padding: 50px;
+  width: 50%;
 }
