--- a/src/components/css/CreatePoll.css
+++ b/src/components/css/CreatePoll.css
@@ -6,3 +6,17 @@
 .options {
   padding-left: 2em;
 }
+.pollUrl {
+  background: #e8e6e6;
+  border: 1px solid;
+  border-radius: 3px;
+  padding: 10px;
+}
+.padding10 {
+  padding: 10px;
+}
+.icons img {
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+}
