--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -7,11 +7,15 @@
   overflow-x: hidden;
   padding: 5px 15px;
 }
+.poll:hover {
+  background: rgba(0,0,0,0.1);
+  cursor: pointer;
+}
 .poll {
   display: flex;
   margin-bottom: 10px;
   width: 100%;
-  padding: 5px;
+  padding: 5px 10px;
   box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
   -moz-box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
   -webkit-box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
