--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   background: #fff;
 }
 .login-background {
-  background: #ABCDEF;
+  background: #FFFFFF;
   font-family: Assistant, sans-serif;
   display: flex;
   min-height: 90vh;
