--- a/src/components/submitpolls/Index.css
+++ b/src/components/submitpolls/Index.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #ABCDEF;
+    background: #FFFFFF;
 }
 .survey-box{
     width: 400px;
@@ -15,8 +15,7 @@
     border: 1px solid #ccc;
     background: #fbf9f6;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
 }
 .survey-poll {
     width: 70%;
@@ -32,4 +31,35 @@
     margin-bottom: -1px;
     background-color: #fff;
     border: 1px solid #ddd;
+}
+div.survey-header {
+  text-align: center;
+  padding: 5px 0;
+}
+div.survey-code {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - 42px);
+}
+input.code-input {
+  height: 20%;
+  width: 80%;
+  text-align: center;
+  font-size: 30px;
+  padding: 25px;
+  text-transform: uppercase;
+}
+div.submit-code {
+  padding: 5px 0;
+  text-align: center;
+  letter-spacing: 2px;
+}
+div.submit-code button {
+  border-radius: 5px;
+}
+input.code-input::placeholder {
+  font-weight: 200;
+  color: rgba(0,0,0,0.3);
+  text-transform: lowercase;
 }
