--- a/src/components/submitpolls/Index.css
+++ b/src/components/submitpolls/Index.css
@@ -8,6 +8,15 @@
     align-items: center;
     background: #FFFFFF;
 }
+.survey-card{
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  /* margin: 5px; */
+  display: flex;
+  justify-content: center;
+  background: #fffcf1;
+}
 .survey-box{
     width: 400px;
     height: 300px;
@@ -19,6 +28,20 @@
 }
 .survey-poll {
     width: 70%;
+}
+.survey-err {
+  /* width: 400px; */
+  margin: 1em 10%;
+  padding: 10px;
+  border: 1px solid #cc3300;
+  background: #ffece6;
+  border-radius: 10px;
+  color: #cc3300;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .list-group{
     margin-bottom: 0px;
@@ -62,4 +85,7 @@ input.code-input::placeholder {
   font-weight: 200;
   color: rgba(0,0,0,0.3);
   text-transform: lowercase;
+}
+.width-100-per {
+  width: 100%;
 }
