--- a/src/components/css/EditPoll.css
+++ b/src/components/css/EditPoll.css
@@ -14,6 +14,9 @@ input, label {
     color: rgba(0, 0, 0, 0.85);
     font-size: 14px
 }
+input:focus {
+    border-color: #40a9ff !important;
+}
 .title::before {
     display: inline-block;
     margin-right: 4px;
@@ -89,4 +92,7 @@ input, label {
 }
 .dispaly-flex {
     display: flex;
+}
+.field-error {
+    border: 1px solid red !important;
 }
