--- a/src/components/submitpolls/Index.css
+++ b/src/components/submitpolls/Index.css
@@ -120,3 +120,9 @@ input.code-input::placeholder {
   font-size: 20px;
   font-weight: 200;
 }
+
+.msg-error {
+  text-align: center;
+  color: #cc3300;
+  font-size: 1em
+}
